WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
276394
The subtleCrypto.deriveBits doesn't handle 'null' values correctly
https://bugs.webkit.org/show_bug.cgi?id=276394
Summary
The subtleCrypto.deriveBits doesn't handle 'null' values correctly
Javier Fernandez
Reported
2024-07-09 16:19:11 PDT
There was a discussion in the issue #322 [1] about the lack of a proper way to handle null or omitted values for the deriveBits's length argument, given how it's currently defined in the IDL. There was a proposal in issue #329 [2] to define the 'length' argument as optional, and defaulting to 'null'. The PR#345 [3] has been merged recently to fix this inconsistency in the Web Cryptography API specification, that lead to a few interoperability issues in the deriveBits operation of several algorithms (ECDH, HKDF, PBKDF2 and X25519). [1]
https://github.com/w3c/webcrypto/issues/322
[2]
https://github.com/w3c/webcrypto/issues/329
Attachments
Add attachment
proposed patch, testcase, etc.
Javier Fernandez
Comment 1
2024-07-10 15:19:48 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/30667
Radar WebKit Bug Importer
Comment 2
2024-07-16 16:20:14 PDT
<
rdar://problem/131878054
>
EWS
Comment 3
2024-07-23 04:24:03 PDT
Committed
281240@main
(9586d3db576c): <
https://commits.webkit.org/281240@main
> Reviewed commits have been landed. Closing PR #30667 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug